[tool.poetry]
name = "power-consumption-monitor"
version = "0.1.0"
description = ""
authors = ["Marcel Stolin <mstolin@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.4.4"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
